question and earth
modification

--- a/earth.html
+++ b/earth.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Intro</title>
 		<meta charset="utf-8">
+		<link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
 			body {
@@ -34,7 +35,8 @@
 				margin-top: -2em;
 				opacity: 0;
 				font-size: 3em;
-				color: #FFF;
+				color: #FFFFFF;
+				font-family: 'Passion One', cursive;
 			}
 
 			a {
