--- a/earth.html
+++ b/earth.html
@@ -318,6 +318,9 @@
 			}
 
 		</script>
-		<div id="texte_intro">Appuyer pour commencer</div>
+		<div id="texte_intro">
+			<h1>The quizerse</h1>
+			<h2>Appuyer pour Commencer </h2>
+		</div>
 	</body>
 </html>
