--- a/earth.html
+++ b/earth.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<title>Intro</title>
 		<meta charset="utf-8">
@@ -36,7 +36,10 @@
 				opacity: 0;
 				font-size: 3em;
 				color: #FFFFFF;
-				font-family: 'Passion One', cursive;
+				@font-face {
+					font-family: 'Supersonic Rocketship';
+					src: url(Supersonic Rocketship.ttf);
+				}
 			}
 
 			a {
